# profile-pdf-parser

./: .gitignore  LICENSE  README.md  pyproject.toml
src/linkedin_profile_pdf/: __init__.py
src/profile_pdf_parser/: __init__.py  __main__.py  parser.py
