[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linkedin-profile-pdf"
version = "0.1.0"
description = "Parse LinkedIn profile PDF exports into structured profile data."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Contact & Cooperation Vereinsportal" }]
dependencies = ["pdfplumber>=0.11,<0.12"]
keywords = ["linkedin", "pdf", "parser", "profile"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/lasselenz/linkedin-profile-pdf"
Repository = "https://github.com/lasselenz/linkedin-profile-pdf"
Issues = "https://github.com/lasselenz/linkedin-profile-pdf/issues"

[tool.setuptools.packages.find]
where = ["src"]
