[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "profile-pdf-parser"
version = "0.1.1"
description = "Parse manually exported professional profile PDFs into structured profile data."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Contact & Cooperation Vereinsportal" }]
dependencies = ["pdfplumber>=0.11,<0.12"]
keywords = ["pdf", "parser", "profile", "cv"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/fkallmer/profile-pdf-parser"
Repository = "https://github.com/fkallmer/profile-pdf-parser"
Issues = "https://github.com/fkallmer/profile-pdf-parser/issues"

[tool.setuptools.packages.find]
where = ["src"]
